# justdrink-app

./: .envrc  .gitignore  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
.github/: publish-to-auto-release.yml
.github/workflows/: publish.yml
assets/: drinknow-tray-icon.psd  justdrink-tray-icon.psd  tray-icon.psd  welcome-pain-types.psd
src/: app.css  app.html  app.ts  bindings.ts  helper.ts  hooks.client.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.appstore.conf.json  tauri.appstore.windows.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: drinknow-app-logo.icns  icon.icns  original.icns
src-tauri/src/: actionbar_window.rs  alert.rs  app_config.rs  countdown_timer.rs  coutndown_timer.rs  dashboard_window.rs  detect_idling.rs  detect_mouse_state.rs  error.rs  feedback_window.rs  lib.rs  license_manager.rs  main.rs  menubar.rs  model.rs  pretty_time.rs  session_repository.rs  session_timer.rs  session_window.rs  settings_manager.rs  settings_system.rs  settings_window.rs  setup.rs  start_soon_window.rs  subscription_manager.rs  tracking.rs  tray.rs  updater_window.rs  welcome_window.rs
src-tauri/src/fullscreen/: mac.rs  mod.rs
src-tauri/src/idle/: mac.rs  mod.rs  windows.rs
src-tauri/src/model/: device.rs  event.rs  license.rs  session.rs  settings.rs  welcome.rs
src-tauri/videos/: full.mov  full.webm  package-videos.sh
src/icons/: Alert.svelte  AlertOff.svelte  AlertOn.svelte  GlassEmpty.svelte  InfoOutline.svelte  LicenseOutline.svelte  Minimize.svelte  Pause.svelte  Play.svelte  SettingsGear.svelte  Speaker.svelte  Timeline.svelte  Xmark.svelte
src/routes/: +page.svelte  AutoSize.svelte  BackgroundVideo.svelte  DrinkCharacters.ts  PriceFormatter.ts  Session.svelte  StripePaymentInfo.ts  session-times.ts
src/routes/actionbar/: +page.svelte  +page.ts
src/routes/alert/: +page.svelte
src/routes/dashboard/: +page.svelte
src/routes/error/: +page.svelte
src/routes/feedback/: +page.svelte  +page.ts
src/routes/session/: +page.svelte  +page.ts  AdviceMessage.svelte  AudioPlayer.svelte  CharacterDrinkPlayer.svelte  VideoPlayer.svelte
src/routes/settings/: +page.svelte  +page.ts  About.svelte  DropdownTime.svelte  License.svelte  LicensePayMessage.svelte  Settings.svelte  Tracking.svelte
src/routes/startsoon/: +page.svelte
src/routes/updater/: +page.svelte  +page.ts  stateType.ts  updateState.ts
src/routes/welcome/: +page.svelte  +page.ts  CalculatedDrinkAmount.ts  DrinkTimeCalculator.ts  Error.svelte  Gender.ts  LimitNumber.ts  LoadingSpinner.svelte  LquidSystem.ts  MeasureSystem.ts  Navigation.svelte  Pain.ts  SelectDisclaimer.svelte  SelectDrinkAmountPerDay.svelte  SelectEnd.svelte  SelectExercise.svelte  SelectGender.svelte  SelectPainType.svelte  SelectPayment.svelte  SelectProduct.svelte  SelectReminder.svelte  SelectSessionTime.svelte  SelectSipSize.svelte  SelectStart.svelte  SelectSubscribe.svelte  SelectWeight.svelte  SipSize.ts  StripePayment.ts  StripePaymentInfo.ts  ThankYou.svelte  Time.ts  VolumeConverter.ts  WeightConverter.ts  WeightSystem.ts  WelcomeStep.ts  Wizard.svelte
