[package]
name = "motionminute-app"
version = "0.1.4"
description = "Motion Minute is your personal reminder to take regular, healthy breaks while working at your desk, boosting wellness and productivity."
authors = ["Felix Eckhardt"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "motionminute_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.0.6", features = ["protocol-asset", "macos-private-api", "tray-icon", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.22"
tauri-plugin-log = "2.0.1"
specta = "2.0.0-rc.20"
specta-typescript = "0.0.7"
tauri-specta = { version = "=2.0.0-rc.20", features = ["derive", "typescript"] }
rand = "0.8.5"
timer = "0.2.0"
chrono = { version = "0.4.38", features = ["serde"] }
tauri-plugin-fs = "2.0.1"
tauri-plugin-os = "2.0.1"
tauri-plugin-autostart = "2.0.1"
mouse_position = "0.1.4"
tauri-plugin-store = "2.0.1"
anyhow = "1.0.89"
machine-uid = "0.5.3"
tauri-plugin-http = { version = "2.0.1", features = ["blocking"] }
urlencoding = "2.1.3"
user-idle = "0.6.0"
webbrowser = "1.0.2"
sha2 = "0.10"
tauri-plugin-aptabase = { git = "https://github.com/aptabase/tauri-plugin-aptabase", branch = "v2" }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.0"
objc = "0.2.7"
objc_exception = "0.1.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "psapi", "processthreadsapi", "handleapi", "winver"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.0.1"
tauri-plugin-single-instance = "2.0.1"
tauri-plugin-updater = "2.0.2"
