[package]
name = "drinknow"
version = "0.1.5"
description = "Drink Now! is your immerse reminder to take regular, healthy sips at your desk, boosting wellness and productivity."
edition = "2021"
default-run = "drinknow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "drinknow"

[lib]
name = "drinknow_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[features]
default = []
fullversion = []
local = []
used_linker = []
cargo-clippy = []

[dependencies]
tauri = { version = "2.2.5", features = ["protocol-asset", "macos-private-api", "tray-icon", "image-png", "native-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
log = "0.4.25"
tauri-plugin-log = "2.2.1"
specta = "2.0.0-rc.22"
specta-typescript = "0.0.9"
specta-util = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
rand = "0.9.0"
timer = "0.2.0"
chrono = { version = "0.4.39", features = ["serde"] }
tauri-plugin-fs = "2.2.0"
tauri-plugin-os = "2.2.0"
tauri-plugin-autostart = "2.2.0"
mouse_position = "0.1.4"
tauri-plugin-store = "2.2.0"
anyhow = "1.0.95"
machine-uid = "0.5.3"
tauri-plugin-http = { version = "2.3.0", features = ["blocking"] }
urlencoding = "2.1.3"
user-idle = "0.6.0"
webbrowser = "1.0.3"
sha2 = "0.10"
tauri-plugin-aptabase = { git = "https://github.com/aptabase/tauri-plugin-aptabase", branch = "v2" }
tauri-plugin-process = "2.2.0"
window-vibrancy = { git = "https://github.com/tauri-apps/window-vibrancy" }
tauri-plugin-global-shortcut = "2.2.0"
tauri-plugin-single-instance = "2.2.1"
tauri-plugin-updater = "2.5.0"


[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.0"
objc = "0.2.7"
objc_exception = "0.1.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "psapi", "processthreadsapi", "handleapi", "winver"] }
